base/capturer.yaml
apiVersion: v1
kind: Service
metadata:
  name: capturer
spec:
  selector:
    app: capturer
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
